fix: better align media property icons

--- a/src/renderer/scss/component/_media.scss
+++ b/src/renderer/scss/component/_media.scss
@@ -298,10 +298,6 @@
       position: relative;
       top: 0.2rem;
     }
-
-    svg {
-      padding-top: 0.2rem;
-    }
   }
 
   svg {
